--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@
   "rules": {},
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript"
   ]
 }
