--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.28.0",
+    "eslint-plugin-import": "^2.23.4",
     "ts-loader": "^9.2.2",
     "typescript": "^4.3.2",
     "webpack-dev-server": "^3.11.2"
