--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "main.ts",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js --open",
+    "start": "node config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "echo \"Error: no test specified\" && exit 1"
