--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "rules": {},
+  "rules": {
+    "import/prefer-default-export": 0,
+    "import/no-default-export": 2,
+  },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
