--- a/package.json
+++ b/package.json
@@ -1,38 +1,63 @@
 {
-  "name": "react-ts-template",
-  "version": "0.0.1",
-  "main": "main.ts",
-  "license": "MIT",
+  "name": "template",
+  "version": "0.1.0",
+  "licence": "MIT",
+  "private": false,
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js --open",
+    "start": "node config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:staged": "lint-staged",
+    "prepare": "husky install",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@react-hook/window-size": "^3.0.7",
+    "@reduxjs/toolkit": "^1.6.0",
+    "@types/react-router-dom": "^5.1.7",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "connected-react-router": "^6.9.1",
     "file-loader": "^6.2.0",
+    "history": "^4.7.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "lodash": "^4.17.21",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
+    "@redux-saga/types": "^1.1.0",
     "@types/lodash": "^4.14.170",
-    "@types/node": "^15.12.1",
+    "@types/node": "^15.12.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux-logger": "^3.0.8",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.28.0",
     "eslint-plugin-import": "^2.23.4",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "redux-logger": "^3.0.6",
     "ts-loader": "^9.2.2",
     "typescript": "^4.3.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "engines": {
+    "node": ">=14.17.0"
   },
   "browserslist": {
     "production": [
